# murder

./: .gitignore  Cargo.toml  README.md  TODO.md  WEB_DESIGN_GUIDELINES.md  compacted-state.md  test-edit-file.txt
backend/crates/murder-acp/: Cargo.toml
backend/crates/murder-acp/src/: agent.rs  lib.rs  terminals.rs
backend/crates/murder-db/: Cargo.toml
backend/crates/murder-db/src/: db.rs  layout.rs  lib.rs  window_state.rs
backend/crates/murder-git/: Cargo.toml
backend/crates/murder-git/src/: cmd.rs  error.rs  lib.rs
backend/crates/murder-lsp/: Cargo.toml
backend/crates/murder-lsp/src/: call_hierarchy.rs  code_action_engine.rs  completion_engine.rs  conversion.rs  diagnostics.rs  document_color.rs  document_link.rs  format.rs  go_to.rs  hover_engine.rs  inlay_hints.rs  lib.rs  registry.rs  rename_engine.rs  selection_range.rs  signature_help.rs  transport.rs  type_hierarchy.rs  workspace_edit.rs
backend/crates/murder-server/: Cargo.toml
backend/crates/murder-server/src/: handlers.rs  lib.rs  main.rs  router.rs  state.rs  ws.rs
backend/crates/murder-settings/: Cargo.toml
backend/crates/murder-settings/src/: lib.rs  settings.rs
backend/crates/murder-syntax/: Cargo.toml
backend/crates/murder-syntax/src/: bracket.rs  folding.rs  indent.rs  lib.rs  parser.rs  scope.rs
backend/crates/murder-terminal/: Cargo.toml
backend/crates/murder-terminal/src/: lib.rs  pty.rs  shell.rs  shell_integration.rs
backend/crates/murder-text/: Cargo.toml
backend/crates/murder-text/src/: buffer.rs  edit.rs  encoding.rs  lib.rs  line_ending.rs  position.rs  range.rs  text_model.rs  utf16.rs
backend/crates/murder-textmate/: Cargo.toml
backend/crates/murder-theme/: Cargo.toml
backend/crates/murder-theme/src/: icon_theme.rs  lib.rs  workbench_colors.rs
backend/crates/murder-workspace/: Cargo.toml
backend/crates/murder-workspace/src/: error.rs  file_ops.rs  file_tree.rs  lib.rs  watcher.rs  workspace.rs  worktree_state.rs
docs/plan/: AGENT_STATUS.md  PLAN.md  PROMPT.md  TODO.md
docs/plan/acp_client/: PLAN.md  TODO.md
docs/plan/ide/: TODO.md
electron/: README.md  build.sh  main.ts  package-lock.json  package.json  tsconfig.json
electron/icons/: icon.icns
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/public/: agent-config.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: ActivityBar.tsx  BottomBar.tsx  ChatPane.tsx  ChatSessionBody.tsx  ChatSessionPane.tsx  ChatTabs.tsx  ChatTile.tsx  ContextMenu.tsx  EditorPane.tsx  ExplorerPane.tsx  FileViews.tsx  FolderPicker.tsx  InlineTerminal.tsx  MenuBar.tsx  MosaicLayout.tsx  RpcLogPanel.tsx  SettingsPane.tsx  StatusBar.tsx  TabBar.tsx  TerminalPane.tsx  WebViews.tsx  WorkspacePane.tsx
frontend/src/components/ui/: badge.tsx  input.tsx  separator.tsx
frontend/src/lib/: acp-client.ts  acp-store.ts  acp-utils.ts  file-cache.ts  file-icons.tsx  icons.tsx  monaco-workers.ts  settings.ts  workspace-context.tsx  ws-client.ts
sandbox/mosaic-react-experiment/: package.json
sandbox/mosaic-react-experiment/src/: App.tsx  index.css
