[package]
name = "murder-acp"
description = "Agent Client Protocol integration for Murder IDE"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
murder-text = { workspace = true }
murder-workspace = { workspace = true }
murder-terminal = { workspace = true }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
dashmap = { workspace = true }
parking_lot = { workspace = true }
crossbeam = { workspace = true }
tracing = "0.1"

[lints]
workspace = true
