[package]
name = "murder-git"
description = "Git integration for SideX"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
thiserror = "2"
log = "0.4"

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
