[package]
name = "murder-lsp"
description = "Language Server Protocol client for SideX"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
murder-text = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = "2"
log = "0.4"
lsp-types = "0.97"

[lints]
workspace = true
