[package]
name = "murder-server"
description = "WebSocket server for Murder IDE"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
murder-text = { workspace = true }
murder-workspace = { workspace = true }
murder-terminal = { workspace = true }
murder-acp = { workspace = true }
murder-db = { workspace = true }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

axum = { workspace = true, features = ["ws", "macros"] }
tower = { workspace = true }
tower-http = { workspace = true }
tokio-tungstenite = { workspace = true }
futures = { workspace = true }

notify = { workspace = true }
dashmap = { workspace = true }
parking_lot = { workspace = true }
crossbeam = { workspace = true }
uuid = { version = "1", features = ["v4", "serde"] }

rust-embed = "8"
mime_guess = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "5"

[[bin]]
name = "murder-server"
path = "src/main.rs"

[lints]
workspace = true
