[package]
name = "murder-settings"
description = "Settings/configuration management for SideX"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = "2"
log = "0.4"
notify = { workspace = true }

[lints]
workspace = true
